--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "firebase-admin": "^10.2.0",
     "node-schedule": "^2.1.0"
   }
